erDiagram
    SEGMENT          ||--o{ CUSTOMER                  : "gruplar"
    SEGMENT          ||--o{ CAMPAIGN_SEGMENT          : "hedeflenir"
    PRODUCT          ||--o{ CARD                      : "tanimlar"
    PRODUCT          ||--o{ CAMPAIGN_PRODUCT          : "hedeflenir"
    MERCHANT         ||--o{ CAMPAIGN_MERCHANT         : "hedeflenir"
    TRANSACTION_CODE ||--o{ CAMPAIGN_TRANSACTION_CODE : "hedeflenir"
    CUSTOMER         ||--o{ CARD                      : "sahiptir"

    CAMPAIGN ||--o{ CAMPAIGN_SEGMENT          : "kapsar"
    CAMPAIGN ||--o{ CAMPAIGN_PRODUCT          : "kapsar"
    CAMPAIGN ||--o{ CAMPAIGN_MERCHANT         : "kapsar"
    CAMPAIGN ||--o{ CAMPAIGN_TRANSACTION_CODE : "kapsar"
    CAMPAIGN ||--o{ CAMPAIGN_REWARD           : "odul uretir"

    CARD             ||--o{ TRANSACTION : "yapar"
    CUSTOMER         ||--o{ TRANSACTION : "yapar"
    MERCHANT         ||--o{ TRANSACTION : "kabul eder"
    TRANSACTION_CODE ||--o{ TRANSACTION : "tiplendirir"

    CUSTOMER ||--o{ CAMPAIGN_REWARD : "kazanir"
    CARD     ||--o{ CAMPAIGN_REWARD : "kazanir"

    SEGMENT {
        int     Id          PK
        string  SegmentCode UK
        string  SegmentName
        boolean IsActive
    }

    PRODUCT {
        int     Id          PK
        string  ProductCode UK
        string  ProductName
        boolean IsActive
    }

    MERCHANT {
        int     Id             PK
        string  MerchantNumber UK
        string  MerchantName
        string  MCC
        boolean IsActive
    }

    TRANSACTION_CODE {
        int     Id       PK
        string  Code     UK
        string  Name
        boolean IsActive
    }

    CUSTOMER {
        int     Id             PK
        string  CustomerNumber UK
        string  Gender
        date    BirthDate
        int     SegmentId      FK
        boolean IsActive
    }

    CARD {
        int     Id               PK
        int     CustomerId       FK
        int     ProductId        FK
        string  CardNumberMasked
        tinyint CardType
        boolean IsActive
    }

    CAMPAIGN {
        int      Id                            PK
        string   CampaignCode                  UK
        string   Name
        string   Description
        char     PeriodCode
        datetime StartDate
        datetime EndDate
        int      RewardDelayDays
        datetime EvaluationDate
        tinyint  AccumulationLevel
        decimal  MinTransactionAmount
        tinyint  ThresholdType
        decimal  ThresholdValue
        tinyint  RewardType
        tinyint  RewardCalculationType
        decimal  RewardValue
        decimal  RewardRate
        boolean  IsRepeatable
        decimal  MaxRewardAmountPerTransaction
        decimal  MaxRewardAmount
        tinyint  Status
        boolean  IsActive
        string   CreatedBy
        datetime CreatedDate
        string   ModifiedBy
        datetime ModifiedDate
    }

    CAMPAIGN_SEGMENT {
        int     CampaignId PK,FK
        int     SegmentId  PK,FK
        boolean IsExcluded
    }

    CAMPAIGN_PRODUCT {
        int     CampaignId PK,FK
        int     ProductId  PK,FK
        boolean IsExcluded
    }

    CAMPAIGN_MERCHANT {
        int     CampaignId PK,FK
        int     MerchantId PK,FK
        boolean IsExcluded
    }

    CAMPAIGN_TRANSACTION_CODE {
        int     CampaignId        PK,FK
        int     TransactionCodeId PK,FK
        boolean IsExcluded
    }

    TRANSACTION {
        bigint   Id                    PK
        int      CardId                FK
        int      CustomerId            FK
        int      MerchantId            FK
        int      TransactionCodeId     FK
        datetime TransactionDate
        datetime PostingDate
        decimal  Amount
        char     CurrencyCode
        tinyint  InstallmentCount
        string   AuthCode
        string   Rrn                   UK
        boolean  IsOnus
        char     PosEntryMode
        boolean  IsReversed
        bigint   OriginalTransactionId FK
    }

    CAMPAIGN_REWARD {
        bigint   Id                         PK
        int      CampaignId                 FK
        int      CustomerId                 FK
        int      CardId                     FK
        char     PeriodCode
        tinyint  RewardType
        decimal  RewardValue
        int      RewardCount
        int      QualifyingTransactionCount
        decimal  QualifyingAmount
        tinyint  Status
        datetime CalculatedDate
        datetime PostedDate
    }
